--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.32.0",
     "lucide-react": "^0.411.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
