--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
@@ -28,6 +31,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
+    "framer-motion": "^11.3.8",
     "lucide-react": "^0.411.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -37,6 +41,8 @@
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.166.1",
+    "three-globe": "^2.31.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
